* Pressing 'Alt' will now always show all loot tooltips.
* Overhead markers are now displayed for entities that are obscured by tall tiles.
* Dialog options are no longer shown in a separate menu, but are instead part of the main dialog window.
* Added support for dialog responses. For any line of dialog, a list of response topics can be given.

Engine fixes:
* Fixed shrinking tab widgets when widow was resized.
* Remove broken 'font_fallback' from engine/font_settings.txt.
* Add tooltips to language list to show language codes.
* Make strings related to elements more translator-friendly.
* Fixed a bug where looped map sounds wouldn't play if the player entered the map with a sound volume of 0, but later raised the volume.

New translations:

* Catalan (ca) by Marc Tormo i Bochaca

Translation updates:

* German (de) update (Fyrenic)
* Scottish Gaelic (gd) update (GunChleoc)
* Brazilian Portuguese (pt_BR) update (Rui)
* Portuguese (pt) update (Rui)
* Ukranian (uk) update (Igor Paliychuk)
* Vietnamese (vi) update (Nguyễn Gia Phong)



Flare v1.08 (http://flarerpg.org/index.php/2018/09/17/flare-1-08/)

Engine fixes:

* Fixed sdl_hardware renderer not clearing top/bottom for tall windows.
* Re-create render context when "ignore_texture_filter" setting changes.
* Fixed bug where points spent on passive powers would be de-allocated after dying.
* Prevent upgrading powers with the '+' button while the player is dead.
* Fix off-by-one error when calculating loot drop rates.

Translation updates:

* German (de) update (Wuzzy2)
* French (fr) update (Simon Georges)
* Scottish Gaelic (gd) update (GunChleoc)
* Italian (it) update (Fabio Loli)



Flare v1.07 (http://flarerpg.org/index.php/2018/08/31/flare-1-07/)

Engine features:

* Added descriptions for some of the player stats to help clarify their purpose.
* The game now remembers if the player dismissed the quest log notification.